Working concept - More styling and fitnfinish ahead: SQLite, encapsulation, etc.

--- a/PDFMaker.csproj
+++ b/PDFMaker.csproj
@@ -8,9 +8,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Crc32.NET" Version="1.2.0" />
       <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.10" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.1" />
       <PackageReference Include="Microsoft.Playwright" Version="1.48.0" />
+      <PackageReference Include="QRCoder.Core" Version="1.0.3" />
     </ItemGroup>
 
     <ItemGroup>
