--- a/PDFMaker/PDFMaker.csproj
+++ b/PDFMaker/PDFMaker.csproj
@@ -2,13 +2,13 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <LangVersion>13</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Crc32.NET" Version="1.2.0" />
       <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.10" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.1" />
       <PackageReference Include="Microsoft.Playwright" Version="1.48.0" />
@@ -20,5 +20,9 @@
         <CopyToOutputDirectory>Never</CopyToOutputDirectory>
       </Content>
       <None Remove="Invoices\InvoiceView.razor.css" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Data\Data.csproj" />
     </ItemGroup>
 </Project>
