--- a/Invoicify.Client/Properties/launchSettings.json
+++ b/Invoicify.Client/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "InvoiceCreator",
+      "launchUrl": "",
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
       "applicationUrl": "http://localhost:5125",
       "environmentVariables": {
