Moved generation of files server-side due to Blazor (JS) limitations. As a result, interops were removed and Client no longer references FileGenerator. This also solved Raster PDF issue.

--- a/Invoicify.Client/Invoicify.Client.csproj
+++ b/Invoicify.Client/Invoicify.Client.csproj
@@ -13,7 +13,10 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Data\Data.csproj" />
-      <ProjectReference Include="..\FileGenerator\FileGenerator.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="wwwroot\js\" />
     </ItemGroup>
 
 </Project>
